--- a/index.html
+++ b/index.html
@@ -2200,7 +2200,7 @@
 
 
 						<p class="has-text-align-center">
-						<p class="has-text-align-center" style="padding-left: 200px;padding-right: 200px">
+						<p class="has-text-align-center">
 							<strong><em>Everyone has a voice to express. We support individuals who are dedicated and
 									passionate about expressing themselves, and provide them with the opportunity to be
 									heard.</em></strong></p>
