--- a/index.html
+++ b/index.html
@@ -1928,9 +1928,9 @@
 	<meta name="twitter:card" content="summary_large_image" />
 
 	<!-- End Jetpack Open Graph Tags -->
-	<link rel="shortcut icon" type="image/x-icon" href="https://s1.wp.com/i/favicon.ico"
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"
 		sizes="16x16 24x24 32x32 48x48" />
-	<link rel="icon" type="image/x-icon" href="https://s1.wp.com/i/favicon.ico" sizes="16x16 24x24 32x32 48x48" />
+	<link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16 24x24 32x32 48x48" />
 	<link rel="apple-touch-icon" href="https://s2.wp.com/i/webclip.png" />
 	<link rel="search" type="application/opensearchdescription+xml" href="https://wearsnext.wordpress.com/osd.xml"
 		title="Home" />
