Changed instagram username on apply now

--- a/apply_now.html
+++ b/apply_now.html
@@ -1675,7 +1675,7 @@
 
 
 			<h2 style="margin-left: 1em" class="wp-block-heading">To apply DM us on our Instagram <a
-					href="https://www.instagram.com/_murphy_music_/">here.</a> </h2>
+					href="https://www.instagram.com/murphymusicmm/">here.</a> </h2>
 	</div>
 
 	</main>
